<resources>
    <string name="app_name">Ceibro</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="start_typing_your_comment_here">Start typing your comment here</string>
    <string name="do_you_want_to_cancel_all_the_changes_that_you_made">Do you want to cancel all the changes that you made?</string>
    <string name="no_btn_text">No</string>
    <string name="yes_btn_text">Yes</string>
    <string name="do_you_want_to_delete_photo">Do you want to delete photo?</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="new_photo">New photo</string>
</resources>