<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CeibroCameraActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="@dimen/_9sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeBtn"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_cross"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/galleryButton"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_photo_picker"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Comment or delete bottom ImageView to see recyclerView because its just sample-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/new_background"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/commentsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fullSizeImagesVP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/commentsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout" />


        <LinearLayout
            android:id="@+id/editInnerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black_transparency"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/squareBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_square"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrowBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_top_arrow"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/drawBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_edit_pencil"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/insertTextBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_insert_text"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/undoBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_undo"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_44sdp"
                android:layout_weight="1"
                android:background="@color/appRed"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/icon_delete_bin"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footerImagesLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black_transparency"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/commentsLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/footerImageLayoutMoveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/moveBtn"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="3dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/smallFooterImagesRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_1sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/commentsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLayout"
                tools:itemCount="3"
                tools:listitem="@layout/layout_ceibro_small_image_viewer" />

            <!--Comment or delete bottom ImageView to see recyclerView because its just sample-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/recyclerImg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_64sdp"
                android:layout_weight="1"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/new_background"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/commentsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:paddingHorizontal="@dimen/_3sdp"
                android:paddingVertical="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/newPhotoText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/new_photo"
                    android:textColor="@color/appBlue"
                    android:textSize="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/camImg" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/camImg"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_add_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/camLine"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:background="@color/appGrey"
                app:layout_constraintBottom_toBottomOf="@+id/cameraBtn"
                app:layout_constraintStart_toEndOf="@+id/cameraBtn"
                app:layout_constraintTop_toTopOf="@+id/cameraBtn" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentsField"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/start_typing_your_comment_here"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="11dp"
                android:textColor="@color/black"
                android:textColorHint="@color/appGrey3"
                android:textSize="15.5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/camLine" />

            <!--<androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/confirmBtn"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="0dp"
                android:padding="@dimen/_9sdp"
                android:src="@drawable/icon_circle_tick"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/commentsField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/commentsField"
                app:tint="@color/appBlue" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/editBtn"
                android:layout_width="@dimen/_37sdp"
                android:layout_height="0dp"
                android:padding="@dimen/_9sdp"
                android:src="@drawable/icon_edit_pencil"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/commentsField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/commentsField"
                app:tint="@color/appBlue" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveBtn"
                android:layout_width="@dimen/_41sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@drawable/blue_button_back"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/okBtn"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@drawable/blue_button_back"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>